--- a/missing-grade/src/App.css
+++ b/missing-grade/src/App.css
@@ -15,11 +15,11 @@ img {
 body {
   max-width: 100%;
   overflow-x: hidden;
+  background-color: black;
+
 }
 
-body {
-  background-color: black;
-}
+
 
 
 nav {
@@ -28,9 +28,7 @@ nav {
   justify-content: space-between;
   min-height: 90px;
 }
-.navbar-menu-container {
-  display: none;
-}
+
 .navbar-links-container a {
   margin-right: 3rem;
   text-decoration: none;
@@ -38,101 +36,37 @@ nav {
   font-size: 1.1rem;
   font-weight: 200;
 }
-.primary-button {
-  padding: 0.9rem 1.75rem;
-  background-color: white;
-  outline: none;
-  border: none;
-  border-radius: 5rem;
-  font-size: 1.1rem;
-  cursor: pointer;
-  font-weight: 600;
-  transition: 0.2s;
-}
-.navbar-cart-icon {
-  font-size: 1.15rem;
-}
-.primary-button:hover {
-  background-color: rgb(234, 234, 234);
-}
+
 .navbar-menu-container svg {
   font-size: 1.5rem;
   cursor: pointer;
 }
 
-.primary-heading {
-  font-size: clamp(2rem, 5vw, 4rem);
-  color: #fe9e0d;
-  /* line-height: 5rem; */
-  max-width: 600px;
-  margin-top: 1rem;
-}
-.primary-text {
-  font-size: clamp(1rem, 3vw, 1.5rem);
-  max-width: 500px;
-color: beige; 
- margin: 1.5rem 0rem;
-}
-.secondary-button {
-  padding: 1rem 2.5rem;
-  background-color: #fe9e0d;
+.primary-button {
+  padding: 0.9rem 1.75rem;
+  background-color:#e48f0f;;
   outline: none;
   border: none;
   border-radius: 5rem;
   font-size: 1.1rem;
   cursor: pointer;
   font-weight: 600;
-  color: white;
   transition: 0.2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.secondary-button:hover {
-  background-color: #e48f0f;
-}
-.about-section-container {
-  margin-top: 7rem;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.about-background-image-container {
-  position: absolute;
-  left: -10%;
-  z-index: -2;
-  width: 120%;
-  margin-top: 5rem;
-
-}
-.about-section-image-container {
-  flex: 0.9;
-  margin-right: 1rem;
-}
-.about-section-text-container {
-  flex: 1;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-}
-
-
-.about-buttons-container {
-  margin-top: 2rem;
-  display: flex;
+.primary-button:hover {
+  background-color: rgb(234, 234, 234);
 }
 
 
 
 
 .footer-wrapper {
-  display: flex;
+  display:flex;
   justify-content: center;
-  margin-top: 40rem;
   width: 100%;
   background-color:beige;
+  margin-top: 16rem;
  }
  
  .footer-section-two {
