--- a/missing-grade/src/Component/styles/missinggade.css
+++ b/missing-grade/src/Component/styles/missinggade.css
@@ -1,5 +1,37 @@
+
+
+.missing-grade-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin-right: 20px;
+}
+
+.missing-grade-form label {
+  margin-bottom: 5px;
+}
+
+.missing-grade-form input,
+.missing-grade-form textarea {
+  margin-bottom: 15px;
+  padding: 8px;
+  background-color:#fe9e0d; /* Set the background color to black */
+  color: #fff; /* Set the text color to white */
+  border: 1px solid #fff;
+}
+
+.missing-grade-form button {
+  background-color:#fe9e0d ;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.missing-grade-form button:hover {
+  background-color: #fe9e0d;
+}
+
 .missing-section-container {
-    margin-top: 7rem;
     position: relative;
     display: flex;
     align-items: center;
@@ -10,7 +42,6 @@
     left: -10%;
     z-index: -2;
     width: 120%;
-    margin-top: 5rem;
   
   }
   .missing-section-image-container {
@@ -29,4 +60,31 @@
     margin-top: 2rem;
     display: flex;
   }
-  
+.missing-heading{
+  font-size: clamp(2rem, 5vw, 4rem);
+    color: #fe9e0d;
+    max-width: 600px;
+    margin-top: 1rem;
+}
+ 
+.missing-text{
+  font-size: clamp(1rem, 3vw, 1.5rem);
+  max-width: 500px;
+color: beige; 
+ margin: 1.5rem 0rem;
+}
+  .secondary-button1 {
+    padding: 1rem 2.5rem;
+    background-color: #fe9e0d;
+    outline: none;
+    border: none;
+    border-radius: 5rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+    font-weight: 600;
+    color: white;
+    transition: 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
