--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+
 
 .map{
  
- display: block;
+margin-top: 0%;
  width: 100%;
  position: static;
-
-
+ margin-bottom: 20px;
 }
 .landing-page{
   background: url(images/map.jpg);
@@ -45,10 +39,14 @@
   margin-top: 10px;
   background-color: rgb(214, 159, 190);
   width:500px;
-  height: 250px;
+  padding: 25px;
   border-radius: 50px;
 }
 
+.submit{
+  background-color: rgb(85, 70, 73);
+  margin-left: 350px;
+}
 .new{
   background-color: rgb(109, 133, 133);
   display: flex;
@@ -59,4 +57,12 @@
   border-radius: 20px;
   padding: 10px;
 }
+
+.help{
+  height:100%;
+  width:100%;
+  background-color: aqua;
+  
+}
+
 
