--- a/App.css
+++ b/App.css
@@ -92,3 +92,25 @@ li {
   color: #555;
   font-size: 16px;
 }
+
+/* src/App.css */
+/* ... (previous styles) */
+
+nav {
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+}
+
+li {
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+li:hover {
+  text-decoration: underline;
+}
