--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 .footer {
   margin-bottom: 0;
   margin-top: -9.8px;
