--- a/src/Styles/GradeReport.css
+++ b/src/Styles/GradeReport.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 .g-container {
   position: relative;
   top: -10px;
@@ -14,14 +15,14 @@
   margin-top: 100px;
   width: 500px;
   height: 200px;
-  background-color: rgb(30, 104, 188) ;
+  background-color: rgb(30, 104, 188);
   border-radius: 5px;
 }
 span {
   font-weight: bold;
   text-decoration: underline;
 }
-p{
+p {
   font-size: 17px;
 }
 .main {
@@ -62,7 +63,6 @@ th {
   margin-left: 17px;
   margin-bottom: -10px;
 }
-
 
 .my-text {
   font-size: 145px;
