--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -7,9 +7,15 @@
 
 body{
   font-family: 'Roboto', sans-serif;
+  background-color: #ada7a7;
 }
 
 .container{
   max-width: 85%;
   margin: auto;
 }
+.flexSB{
+  display: flex;
+  justify-content: space-between;
+}
+
