--- a/my-react-project/src/components/common/heading/header.css
+++ b/my-react-project/src/components/common/heading/header.css
@@ -1,13 +1,22 @@
 .head{
   padding: 20px 0;
-  color: #000;
+  color: #fff;
 }
 
 .logo h1{
   font-size: 35px;
-  font-weight: 700;
+  font-weight: 750;
 }
 
-.head .icon {
-  margin-left: 10px;
+
+
+
+header {
+  background-color: rgba(255,255,255,0.2);
+  margin: 0 30px;
+}
+
+header li{
+  margin-right: 40px;
+  
 }
