--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@ margin-top: 0%;
 
 }
 
-.contact{
-  font-family: Arial, Helvetica, sans-serif;
-
-}
 
 .hold{
   background-color: rgb(106, 106, 120);
@@ -65,4 +61,17 @@ margin-top: 0%;
   
 }
 
+.dash{
+  background: url(images/map.jpg);
+  width:100%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: none;
+}
+
+footer{
+  height:200px;
+  width:100%;
+  border: 5px;
+  background-color: grey;
+}
 
