changed the appearance of the grade report page by adding more appropriate styles

--- a/grading-website/src/pages/GradeReport.css
+++ b/grading-website/src/pages/GradeReport.css
@@ -1,67 +1,62 @@
-.grade-report-header{
+.grade-report-header
+{text-align: center;
+}
+
+.grade-report-container {
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  border: 2px solid black;
+  margin: 50px auto; /* Center the container */
+}
+
+.level-container {
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  margin-top: 20px; /* Adjust as needed */
+}
+
+.header-box {
+  background-color: rgb(222, 141, 42);
+  display: flex;
+  justify-content: center;
+}
+
+.level-header {
+  margin-top: 20px; /* Adjust as needed */
   text-align: center;
 }
 
-.grade-report-container{
-  position: relative;
-  display:flex;
-  flex-direction: column;
-  width:1000px;
-  border:2px solid black;
-  margin-left:300px;
-  margin-top: 50px;
+.level-container h2 {
+  color: white;
 }
-.level-container{
-  position:relative;
-  display: flex;
-  flex-direction: column;
-  width:1000px;
-  height: 500px;
+
+.level-container p {
+  color: rgb(180, 173, 173);
 }
-.header-box{
-  position:absolute;
-  left:300px;
-  top:10px;
-  width:500px;
-  background-color: rgb(222, 141, 42);
-  display:flex;
-  justify-content: center;
+
+.level-container h3 {
+  color: #2c2a58;
 }
-.level-header{
-  margin-top:60px;
-  text-align: center;
+
+.level-container h4 {
+  color: black;
 }
-.level-container h2{
- color:white;
+
+.courses-and-grades-container {
+  display: grid;
+  grid-template-columns: 400px 300px;
+  column-gap: 300px; /* Adjust as needed */
+  row-gap: 10px;
+  text-align: justify;
+  margin-left: 100px;
 }
-.level-container p{
-  color:rgb(180, 173, 173);
-}
-.level-container h3{
-  color:#2C2A58;
-}
-.level-container h4{
-  color:black;
-}
-.courses-and-grades-container{
-  position: absolute;
-  left: 100px;
-  top:150px;
- display: grid;
- grid-template-columns: 400px 300px;
- column-gap: 300px;
- row-gap:10px;
- text-align: justify;
-}
-.course-and-grade-header{
-  position: absolute;
-  left:200px;
-  top:100px;
-  width:650px;
+
+.course-and-grade-header {
+  width: 650px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  
+  margin: 10px auto; /* Center the header */
 }
-
-
