--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,7 +4,7 @@
 
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;600;700&display=swap'); */
 
-body{
-  background-color: beige;
+body {
+  background-color: green;
   /* font-family: "Poppins", sans-serif; */
 }
