--- a/reactfile/src/Contact.css
+++ b/reactfile/src/Contact.css
@@ -1,25 +1,31 @@
 .instructor-contact-page-container {
   text-align: center;
   padding: 20px;
+  color: rgb(49, 97, 99);
+  font-style: italic;
+  font-size: 21px;
 }
 
 .instructor-list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+
 }
 
 .instructor-card {
   width: 48%;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  
   border-radius: 8px;
   overflow: hidden;
 }
 
 .instructor-card img {
-  width: 100%;
+  width: 250px;
   height: auto;
+  border-radius: 13px;
 }
 
 .instructor-details {
@@ -31,14 +37,16 @@
 }
 
 .instructor-details button {
-  background-color: #4caf50;
+  background-color: cadetblue;
   color: white;
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
+  padding: 9px;
+  border: 5px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
 .instructor-details button:hover {
-  background-color: #45a049;
+  background-color: rgb(88, 81, 81);
+  transition: 1.5s;
 }
+
