--- a/reactfile/src/LoginPage.css
+++ b/reactfile/src/LoginPage.css
@@ -33,7 +33,8 @@ form {
 }
 
 .PASS{
-  border-radius: 10px;
+  border-radius: 17px;
+  border: 2px dashed cadetblue;
 
 }
 
@@ -49,8 +50,11 @@ input {
 
 button {
   padding: 10px;
-  background-color: #007bff;
+  background-color: rgb(74, 118, 121);
   color: #fff;
   cursor: pointer;
   border: none;
+}
+.stulog{
+  font-size: 30px;
 }
