--- a/reactfile/src/Contactform.css
+++ b/reactfile/src/Contactform.css
@@ -1,10 +1,9 @@
 .contact-form2-container {
-  background-color: #f4f4f4;
+  background-color:rgb(199, 209, 218);
   padding: 20px;
-  border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
   width: 100%;
+  max-width: 450px;
   margin: auto;
 }
 
@@ -18,20 +17,21 @@
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 15px;
+  border: dashed 3px cadetblue;
   box-sizing: border-box;
 }
 
 .form2-container button {
-  background-color: #4caf50;
+  background-color: cadetblue;
   color: white;
   padding: 10px;
-  border: none;
-  border-radius: 4px;
+  border-radius: 15px;
+  border: dashed 3px cadetblue;
   cursor: pointer;
+  transition: 1.5s;
 }
 
 .form2-container button:hover {
-  background-color: #45a049;
+  background-color: rgb(114, 111, 111)
 }
