--- a/src/pages/Homepage/css/Dashboard.css
+++ b/src/pages/Homepage/css/Dashboard.css
@@ -24,8 +24,9 @@
     background-color:#846ff7;
 }
 .sidebar:hover{
-    width: 200px;
+    width: 235px;
     transition: 0.5s;
+    color:#846ff7;
 
 }
 .logoo{
@@ -42,14 +43,16 @@
 .menu li{
     padding: 1rem;
     margin: 6px 0;
+    color: #846ff7;
     border-radius:8px;
     transition: all 0.5s ease-in-out;
 
 }
 .menu li:hover,
 .active{
-background: rgb(179, 176, 176);
-color:#846ff7;
+background: #ebe9e9;
+color:white;
+
 }
 
 .menu a {
@@ -115,7 +118,7 @@ color:#846ff7;
     padding: 4px 12px;
 }
 .search--box input{
-    background: transparent;
+    /* background: transparent; */
     padding: 10px;
 }
 .search--box i {
@@ -132,4 +135,160 @@ color:#846ff7;
 
 
 /*card container*/
+.card--container{
+    background: white;
+    padding: 2rem;
+    border-radius: 10px;
 
+}
+.card--wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+
+}
+.main--title{
+    color: #846ff7;
+    padding-bottom:10px;
+    font-size: 15px;
+
+
+}
+.grade--card{
+    background: #ebe9e9;
+    border-radius:10px;
+    padding: 1.2rem;
+    width: 290px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+
+}
+.grade--card:hover{
+    transform: translateY(-5px);
+
+}
+.card--hearder{
+ display: flex;   
+ justify-content: space-between;
+ align-items: center;
+ margin-bottom:20px;
+}
+.amount{
+    display: flex;
+    flex-direction: column;
+}
+.title{
+    font-size: 12px;
+    font-weight: 200;
+}
+.amount--value{
+    font-size: 24px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+}
+.icon-react{
+    color:#846ff7;
+    padding: 1rem;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 1.rem;
+    background: rgb(240, 76, 76);
+}
+.card-details{
+    font-size: 18px;
+    color: #777777;
+    letter-spacing: 2px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/*Css colors*/
+.light-red{
+    background:rgb(251,233,233);
+}
+.light-purple{
+    background:rgb(233, 219, 233);
+}
+.light-green{
+    background:rgb(233, 254, 245);
+}
+.light-blue{
+    background:rgb(215, 229, 247);
+}
+.light-yellow{
+    background: rgb(219, 215, 162);
+}
+.light-gray{
+    background:#ebe9e9;
+}
+.dark-red{
+    background:red;
+}
+.dark-purple{
+    background:purple;
+} 
+.dark-green{
+    background: green;
+}
+.dark-blue{
+    background: blue;
+}
+.dark-yellow{
+    background: yellow;
+}
+.dark-gray{
+    background: gray;
+}
+
+
+/*Table containerr*/
+.tabular--wrapper{
+    background: white;
+    margin-top: 1rem;
+    border-radius: 10px;
+    padding: 2rem;
+}
+.table-container{
+    width: 100%;
+}
+table{
+    width: 100%;
+    border-collapse:collapse  ;
+}
+thead{
+    background: #846ff7;
+    color:white
+}
+th{
+    padding: 15px;
+    text-align: left;
+}
+tbody{
+    background: #ebe9e9;
+}
+td{
+    padding: 15px;
+    font-size: 14px;
+    color: #333;
+
+}
+tr:nth-child(even){
+    background: #fff;
+}
+
+tfoot{
+    background: rgba(red, green, blue, alpha);
+    font-weight: bold;
+
+    color: #fff;
+}
+tfoot td{
+    padding: 15px;
+}
+.table-container button{
+    color: green;
+}
