--- a/grade-report/src/components/LandingPage.css
+++ b/grade-report/src/components/LandingPage.css
@@ -2,9 +2,9 @@
 
 .home-container {
   background-image: url('../images/image2.jpeg'); /* Adjust the path to your background image */
-  background-size: cover;
+  background-size: 100%;
   background-position: center;
-  color: white; /* Adjust text color based on your background */
+  color: rgb(255, 255, 255); /* Adjust text color based on your background */
   padding: 50px; /* Adjust padding as needed */
 }
 
