--- a/reactpage/src/Navbar.css
+++ b/reactpage/src/Navbar.css
@@ -7,7 +7,7 @@
   .container {
     width: 160px;
     height: 100vh;
-    background-color: grey;
+    background-color: #001f3f;
     color: white;
   }
   
@@ -26,9 +26,9 @@
   
   .container ul li:hover,
   button:hover {
-    background-color: white;
+    background-color: #001f3f;
     cursor: pointer;
-    color: black;
+    color: white;
   }
   
   button {
