--- a/reactpage/src/landing.css
+++ b/reactpage/src/landing.css
@@ -1,17 +1,17 @@
 .nav-list {
     list-style: none;
     display: flex;
-    margin-left: 220px;
+    margin-left: 2000px;
     
     
 }
 
-.nav-item{
+.nav-item {
     margin-top: 26px;
     margin-left: 20px;
 }
 
-.nav-link{
+.nav-link {
     text-decoration: none;
     color: white;
 }
@@ -23,6 +23,7 @@
     font-style: oblique;
     margin-left: 50px;
     margin-right: 50px;
+    color: black;
     font-size: x-large;
 }
 
@@ -35,12 +36,17 @@
 
 .Body {
     margin-top: 70px;
+    color: black;
 }
 
 
 .button1 {
-    margin-left: 580px;
+    margin-left: 530px;
     margin-top: 80px;
     font-family: calibri;
     font-size: xx-large;
+}
+
+.button1:hover {
+    background-color: rgb(18, 18, 36);
 }
