--- a/Navbar.css
+++ b/Navbar.css
@@ -1,16 +1,15 @@
 .navbar{
     width: 100%;
-    height: 69px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: #fff;
-    padding: 8px 5%;
-
+    padding: 4px 30px;
 }
 .logo{
-    width: 170px;
-    height: 70px;
+    height:70px;
+    width: 220px;
     cursor: pointer;
 }
 ul{
@@ -23,7 +22,6 @@ ul li{
     margin: 10px 20px;
     font-size: 14px;
     cursor: pointer;
-
 }
 .search-box{
     display: flex;
@@ -33,7 +31,7 @@ ul li{
     border-radius: 50px;
 }
 .search-box input{
-    padding: 4px;
+    padding: 5px;
     background: transparent;
     border: 0;
     outline: 0;
@@ -42,5 +40,5 @@ ul li{
     max-width: 200px;
 }
 .search-box input::placeholder{
-    color: #fff;
+    color:#fff;
 }
