--- a/Header.css
+++ b/Header.css
@@ -1,17 +1,18 @@
 /* Header.css */
 .center-align {
     text-align: center;
+    color: blue;
   }
   
   header div {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 20px; /* Add margin to separate from the navigation links */
   }
   
   header img {
-    width: 100%; /* Set the desired width for your logo */
-    height: 100%; /* Maintain the aspect ratio */
+    width: 100px; /* Set the desired width for your logo */
+    height: auto; /* Maintain the aspect ratio */
   }
   
