--- a/react-frontend/src/styles/Dashboard.css
+++ b/react-frontend/src/styles/Dashboard.css
@@ -4,6 +4,11 @@ header {
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid;
+  color: white;
+}
+
+.dashboard {
+  background-color: #131007;
 }
 
 .loader-container {
@@ -53,6 +58,7 @@ article.featured {
   align-items: center;
   border-bottom: 1px solid #999595;
   padding-bottom: 40px;
+  color: white;
 }
 
 table {
@@ -63,7 +69,9 @@ table {
 
 td {
   border: 2px solid #060902;
+  color: white;
 }
 th {
   border: 2px solid #060902;
+  color: white;
 }
