--- a/grade-book/src/Styles/ContactPage.css
+++ b/grade-book/src/Styles/ContactPage.css
@@ -42,6 +42,15 @@
 }
 .contact-page h2 {
   font-size: 50px;
-  color: #ccc;
+  color: #ffffff;
   font-style: italic;
+}
+
+.instructor-item textarea {
+  width: 100%;
+  height: 80px;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
