--- a/grade-book/src/Styles/HomePage.css
+++ b/grade-book/src/Styles/HomePage.css
@@ -1,13 +1,18 @@
+.background-image{
+height: 200px;
+}
+img{
+  width: 100%;
+
+}
 
 .home-container {
-  background-image: url('../Images/home.avif');
+  margin-top:  700px;
   background-size: cover;
   background-position: top;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 70vh;
   padding: 2rem;
   box-sizing: border-box;
   color: white;
@@ -16,7 +21,6 @@
  .home-header {
   text-align: center;
   margin-bottom: 2rem;
-  margin-top: 500px;
   color: black;
   font-size: 25px;
   font-weight: 400;
