--- a/src/Layout.css
+++ b/src/Layout.css
@@ -31,17 +31,7 @@ nav {
     align-items: center;
     justify-content: space-between;
   }
-  
-  footer {
-    background-color: white;
-    color: rgb(14, 169, 246);
-    padding: 10px;
-    text-align: center;
-  
-    
-    width: 100%;
-    bottom: 0;
-  }
+ 
 
   .school-logo {
     width: 300px; /* Adjust the width as needed */
@@ -56,6 +46,7 @@ nav {
     display: flex;
     align-items: center;
     
+    
   }
   
   .search-box input {
@@ -63,9 +54,55 @@ nav {
     border: none;
     border-radius: 5px;
     margin-right: 5px;
+    border-style: ridge;
   }
   
   .search-icon {
     width: 20px;
     cursor: pointer;
   }
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+  }
+  
+  .content {
+    flex: 1;
+  }
+  
+  footer {
+    background-color: white;
+    color: rgb(14, 169, 246);
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .footer-section {
+    flex: 1;
+    max-width: 200px; /* Set a maximum width for each section */
+    text-align: left;
+  }
+  
+  .footer-section h3 {
+    color: rgb(231, 188, 36);
+    margin-bottom: 5px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  
+    
+  
