--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -7,7 +7,7 @@
 
 body{
   font-family: 'Roboto', sans-serif;
-  background-color: #ada7a7;
+  background-color: #f8f8f8;
 }
 
 .container{
@@ -29,4 +29,52 @@ li{
 
 button {
   border: none;
+}
+
+.row {
+  width: 50%;
+  text-align: center;
+}
+
+button {
+  padding: 17px 30px;
+  background-color: #fff;
+  color: #1eb2a6;
+  font-weight: 600;
+  border: none;
+  margin: 30px 10px 0 0;
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow: 0 24px 36px -11px rgba(0 0 0 /9%);
+}
+
+button i {
+  margin-left: 20px;
+}
+
+button:hover{
+  box-shadow: none;
+}
+
+.primary-btn{
+  background-color: #1eb2a6;
+  color: #fff;
+}
+
+#heading {
+  text-align: center;
+  padding: 10px 0;
+}
+
+#heading h3{
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #116d65;
+  text-transform: uppercase;
+}
+
+#heading h1{
+  font-size: 45px;
+  margin: 20px 0;
+  text-transform: capitalize;
 }
