--- a/grading-website/src/pages/GradeReport.css
+++ b/grading-website/src/pages/GradeReport.css
@@ -60,3 +60,22 @@
   justify-content: space-between;
   margin: 10px auto; /* Center the header */
 }
+.dropdown-container{
+  margin-left: 900px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 300px;
+  border: 1px solid black;
+  background-color: #2c2a58;
+}
+.level-filter{
+  font-size: 20px;
+  color: white;
+}
+.options{
+  background-color: rgb(181, 136, 80);
+}
+.options option{
+  color:white;
+}
