--- a/my-react-project/src/components/home/hero/hero.css
+++ b/my-react-project/src/components/home/hero/hero.css
@@ -17,3 +17,27 @@
   margin-top: 200px;
 }
 
+.hero #heading h3 {
+  color: #116d65;
+}
+
+.hero #heading {
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width:768px) {
+  .margin{
+    height: 40vh;
+  }
+
+  .hero{
+    background-position: right;
+    padding-top: 50%;
+    height: 80vh;
+  }
+}
+.hero .row {
+  width: 100%;
+}
