--- a/my-react-project/src/components/common/heading/header.css
+++ b/my-react-project/src/components/common/heading/header.css
@@ -14,6 +14,7 @@
 header {
   background-color: rgba(255,255,255,0.2);
   margin: 0 30px;
+  position: relative;
 }
 
 header ul{
@@ -67,7 +68,7 @@ header ul li a:hover {
     font-size: 30px;
     position: absolute;
     right: 50px;
-    top: 20px;
+    top: -20px;
   }
 
   .mobile-nav{
