--- a/grading-system/src/index.css
+++ b/grading-system/src/index.css
@@ -16,7 +16,7 @@
   justify-content: center;
   display: flex;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
 }
 /* HEADER SECTION */
 nav {
@@ -87,11 +87,7 @@ footer {
   border-top: 2px solid #fff;
   padding: 5px 10px;
 }
-.footer h1 {
-  font-size: 32px;
-  text-align: center;
-  margin-top: 20px;
-}
+
 .footer .base-div {
   background: transparent;
 }
@@ -104,15 +100,19 @@ footer {
 /* LOGIN PAGE */
 
 .wrapper {
-  width: 420px;
+  width: 460px;
   background: transparent;
   color: #fff;
   border-radius: 10px;
   padding: 30px 40px;
+  border: 1px solid #fff;
 }
 .wrapper h1 {
   font-size: 36px;
   text-align: center;
+}
+.wrapper h1:hover {
+  color: orange;
 }
 .wrapper .input-box {
   position: relative;
@@ -125,7 +125,7 @@ footer {
   height: 100%;
   background: transparent;
   outline: none;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
   border-radius: 40px;
   font-size: 16px;
   color: #fff;
@@ -140,6 +140,9 @@ footer {
   top: 50%;
   transform: translateY(-50%);
   font-size: 16px;
+}
+.input-box .icon:hover {
+  color: orange;
 }
 .wrapper .remember-forgot {
   display: flex;
@@ -198,6 +201,7 @@ footer {
   color: #fff;
   border-radius: 10px;
   padding: 30px 40px;
+  border: 1px solid #fff;
 }
 .missing-wrapper h1 {
   font-size: 36px;
@@ -214,7 +218,7 @@ footer {
   height: 100%;
   background: transparent;
   outline: none;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
   border-radius: 40px;
   font-size: 16px;
   color: #fff;
@@ -269,12 +273,19 @@ footer {
   min-height: 190%;
   background: transparent;
   outline: none;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
   border-radius: 40px;
   font-size: 16px;
   color: #fff;
   padding: 20px 45px 20px 20px;
   resize: none;
+}
+.complain-area .icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 16px;
 }
 .complain-area textarea::placeholder {
   color: #fff;
@@ -289,13 +300,9 @@ footer {
   color: #fff;
   border-radius: 10px;
   padding: 30px 40px;
-  width: 1290px;
+  width: 990px;
 }
 
-.Home-first h1 {
-  font-size: 36px;
-  font-weight: bold;
-}
 .Home-first h1:hover {
   color: orange;
 }
@@ -312,9 +319,19 @@ footer {
 .Home-fourth a:hover {
   color: orange;
 }
+.Home-second ol li {
+  list-style-type: none;
+  margin: 10px 0;
+}
+.Home-second ol li:hover {
+  color: orange;
+}
 .Home-third ul li {
   list-style-type: none;
   margin: 10px 0;
+}
+.Home-third ul li:hover {
+  color: orange;
 }
 
 /* INSTRUCTOR PAGE */
@@ -354,26 +371,68 @@ footer {
   border-radius: 10px;
   margin: 4px;
   padding: 10px;
-  background: transparent;
+  background: black;
   transition: 0.3s;
-  min-height: 300px;
-  max-height: 300px;
+  min-height: 400px;
+  max-height: 400px;
   min-width: 300px;
   flex-wrap: wrap;
   text-align: center;
+  align-items: center;
+  display: flex;
 }
 .instructor-wrapper .mini-div h1 {
   font-size: 26px;
   text-align: center;
   font-style: italic;
 }
+.instructor-wrapper .mini-div h2 {
+  font-size: 16px;
+  text-align: center;
+  font-style: italic;
+}
 .instructor-wrapper .mini-div h1:hover {
-  text-decoration: underline;
+  color: orange;
+}
+.instructor-wrapper .mini-div h2:hover {
+  color: orange;
 }
 .instructor-wrapper .mini-div:hover {
   border: 4px solid #fff;
 }
+.instructor-wrapper .mini-div div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 250px;
+  max-height: 300px;
+  width: 100%;
+  background-color: #fff;
+  margin-top: 10px;
+  padding: 20%;
+}
 
+#p5 {
+  background: url("./components/Assets/Deen.jpg");
+  background-size: cover;
+  background-position: center;
+}
+#p4 {
+  background: url("./components/Assets/sarpong.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+#p2 {
+  background: url("./components/Assets/soli.jpg");
+  background-size: cover;
+  background-position: center;
+}
+#p1 {
+  background: url("./components/Assets/atta.jpg");
+  background-size: cover;
+  background-position: center;
+}
 /* GRADE REPORT PAGE */
 
 .Grade-report {
@@ -405,7 +464,7 @@ td {
   background: transparent;
   color: #fff;
   border-radius: 10px;
-  width: 60%;
+  width: 70%;
   padding: 30px 40px;
 }
 
@@ -414,11 +473,14 @@ td {
   background: transparent;
   padding: 25px 25px;
 }
-.table-div h4:hover {
+
+th:hover,
+td:hover {
   color: orange;
 }
-th:hover {
-  color: orange;
+table:hover {
+  border: 3px solid #fff;
+  background: black;
 }
 
 /* HELP AND SUPPORT PAGE */
@@ -426,6 +488,114 @@ th:hover {
   background: transparent;
   color: #fff;
   border-radius: 10px;
-  width: 1029px;
   padding: 30px 40px;
+  align-content: center;
+  width: 80%;
+}
+.faq-wrapper ol li {
+  list-style-type: none;
+  margin-bottom: 20px;
+}
+.faq-wrapper ol li strong:hover {
+  color: orange;
+}
+.faq-wrapper {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  width: 100%;
+  padding: 30px 40px;
+  align-content: center;
+  font-size: 20px;
+}
+.faq-wrapper h1 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.faq-wrapper h1:hover {
+  text-decoration: underline;
+}
+
+.team {
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  width: 460px;
+  padding: 30px 40px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+
+.team h3 {
+  text-align: center;
+  font-size: 27px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.team button {
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 0 10px rgba(o, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: bold;
+  margin-top: 40px;
+  border-radius: 40px;
+}
+.team button:hover {
+  background: transparent;
+  color: #fff;
+  border: solid 3px #fff;
+}
+.team .support-input-box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+.support-input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+}
+[type="text"]:focus {
+  border: 3px solid #fff;
+}
+[type="email"]:focus {
+  border: 3px solid #fff;
+}
+[type="message"]:focus {
+  border: solid 3px #fff;
+}
+.support-input-box input::placeholder {
+  color: #fff;
+}
+.support-text-area textarea::placeholder {
+  color: #fff;
+}
+.support-text-area textarea {
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 190%;
+  min-height: 190%;
+  background: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+  resize: none;
 }
