--- a/assignment/src/index.css
+++ b/assignment/src/index.css
@@ -18,7 +18,7 @@
 }
 header{
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: space-between;
     height: 80px;
     padding: 0 2rem;
