--- a/grading-website/src/components/Footer.css
+++ b/grading-website/src/components/Footer.css
@@ -38,7 +38,7 @@ top:10px;
   margin-bottom:5px;
 }
 .quick-links-container a:hover{
-  color:rgb(131, 94, 27);
+  color:rgb(131, 94, 27) !important;
 }
 .contact-us-container{
   display:flex;
