--- a/my-project/src/components/components-css/Navbar.css
+++ b/my-project/src/components/components-css/Navbar.css
@@ -113,7 +113,7 @@ nav .menu-btn,
 }
 
 .name .details {
-  color: #000;
+  color: #8bd3ef;
   font-size: medium;
 }
 
@@ -237,7 +237,7 @@ nav .menu-btn,
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 40px;
+  padding-top: 30px;
   background-color: #ffffff;
 }
 
