--- a/ass-1/src/index.css
+++ b/ass-1/src/index.css
@@ -10,7 +10,7 @@
 }
 .dropdown-menu {
   width: 200px;
-  height: 300px;
+  height: 350px;
   border-radius: 5px;
 }
 ul li a {
@@ -310,4 +310,9 @@ option {
     border-radius: 10px;
     margin: 3rem;
   }
+}
+.ul2 {
+  list-style-type: none;
+  font-size: 40px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
