--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -7,7 +7,8 @@
 
 body{
   font-family: 'Roboto', sans-serif;
-  background-color: #f8f8f8;
+  background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
+  color: #fff;
 }
 
 .container{
@@ -84,3 +85,34 @@ p{
   font-size: 18px;
   
 }
+
+
+  
+
+.auth-form-container, .login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
+}
+
+.auth-form-container {
+  padding: 1.2rem;
+  border: 1px solid;
+  border-radius: 10px;
+  margin: 5rem;
+}
+
+
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+}
+
+input {
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+}
+
